<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:text="@string/items_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cheese_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="268dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:shadowColor="#00000000"
        android:text="@string/cheese_button"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <Button
        android:id="@+id/bread_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="268dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/bread_button"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <Button
        android:id="@+id/egg_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/egg_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/cheese_button"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bread_button"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <Button
        android:id="@+id/bacon_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/bacon_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cheese_button"
        app:layout_constraintTop_toBottomOf="@+id/text_header" />

    <Button
        android:id="@+id/chicken_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:shadowColor="#00000000"
        android:text="@string/chicken_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/green_salad_button"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/rice_button"
        app:layout_constraintTop_toBottomOf="@+id/potato_button" />

    <Button
        android:id="@+id/milk_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/milk_button"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bread_button" />

    <Button
        android:id="@+id/coffee_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/coffee_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/tea_button"
        app:layout_constraintTop_toBottomOf="@+id/cheese_button" />

    <Button
        android:id="@+id/tea_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:shadowColor="#00000000"
        android:text="@string/tea_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bacon_button" />

    <Button
        android:id="@+id/rice_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/rice_button"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milk_button" />

    <Button
        android:id="@+id/potato_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:shadowColor="#00000000"
        android:text="@string/potato_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/coffee_button"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/milk_button"
        app:layout_constraintTop_toBottomOf="@+id/egg_button" />

    <Button
        android:id="@+id/green_salad_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:text="@string/green_salad_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/carrot_button"
        app:layout_constraintTop_toBottomOf="@+id/coffee_button" />

    <Button
        android:id="@+id/carrot_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:onClick="returnReply"
        android:outlineProvider="paddedBounds"
        android:shadowColor="#00000000"
        android:text="@string/carrot_button"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tea_button" />

</androidx.constraintlayout.widget.ConstraintLayout>