<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/shopping_list_header"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/shopping_list_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item1"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopping_list_header" />

    <TextView
        android:id="@+id/item2"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1" />

    <TextView
        android:id="@+id/item3"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item2" />

    <TextView
        android:id="@+id/item4"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item3" />

    <TextView
        android:id="@+id/item5"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item4" />

    <TextView
        android:id="@+id/item6"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item5" />

    <TextView
        android:id="@+id/item7"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item6" />


    <TextView
        android:id="@+id/item8"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item7" />

    <TextView
        android:id="@+id/item9"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item8" />

    <TextView
        android:id="@+id/item10"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item9" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="168dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="168dp"
        android:layout_height="54dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetList"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>